fix: build CLI during npm publish and fix configuration issues
- Update prepublishOnly to run build:all (includes CLI)
- Add missing .opencode/package.json
- Fix consumer validation issues for CI/CD pipeline

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build:all": "npm run build && npm run build:plugin",
     "build:plugin": "tsc --project tsconfig.plugin.json",
     "clean": "rm -rf dist",
-    "prepublishOnly": "npm run build:plugin",
+    "prepublishOnly": "npm run build:all",
     "postinstall": "node scripts/postinstall.cjs",
     "ci-install": "npm ci --ignore-scripts && npm run postinstall",
     "preinstall": "echo '🔧 Installing StringRay Framework dependencies...'",
