--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -23,10 +23,13 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
 
-      - name: Install dependencies
-        run: npm ci --ignore-scripts
+       - name: Install dependencies
+         run: npm ci --ignore-scripts
 
-      - name: TypeScript type check
+       - name: Run postinstall configuration
+         run: npm run postinstall
+
+       - name: TypeScript type check
         run: npm run typecheck
 
       - name: Lint code
