fix: completely disable CodeQL with empty permissions and additional env vars
- Set permissions: {} to disable all automated security features
- Add CODEQL_ACTION_FEATURE_*=false to disable CodeQL features
- Remove dummy disable job, rely on permissions and env vars

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -8,14 +8,13 @@ on:
   workflow_dispatch:
 
 # Disable CodeQL for this workflow
-permissions:
-  security-events: none
-  actions: read
-  contents: read
+permissions: {}
 
 # Disable CodeQL
 env:
   CODEQL_ACTION_DISABLE: true
+  CODEQL_ACTION_FEATURE_MULTI_LANGUAGE: false
+  CODEQL_ACTION_FEATURE_SARIF_COMBINE: false
 
 jobs:
   test:
