fix: disable CodeQL completely with comprehensive config
- Disable all default queries and custom queries
- Ignore all paths to prevent CodeQL scanning
- Use disable-all-queries flag for complete disable

--- a/.github/codeql/config.yml
+++ b/.github/codeql/config.yml
@@ -1,9 +1,7 @@
 disable-default-queries: true
-
 queries: []
-
+paths:
+  - "**/*"
 paths-ignore:
   - "**"
-
-workflows:
-  - ci-cd.yml: false
+disable-all-queries: true
