fix: provide proper CodeQL permissions to resolve API access errors
- Grant security-events: read permission for CodeQL API access
- Keep actions: read and contents: read for workflow functionality
- Allow CodeQL to upload results without permission errors

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -7,8 +7,11 @@ on:
     branches: [main, master]
   workflow_dispatch:
 
-# Disable CodeQL for this workflow
-permissions: {}
+# Enable CodeQL permissions for this workflow
+permissions:
+  security-events: read
+  actions: read
+  contents: read
 
 # Disable CodeQL
 env:
