fix: grant CodeQL security-events: write permission for API access
- Change security-events from read to write permission
- Allow CodeQL to upload results to GitHub Security tab
- Should resolve 'Resource not accessible' API errors

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -9,7 +9,7 @@ on:
 
 # Enable CodeQL permissions for this workflow
 permissions:
-  security-events: read
+  security-events: write
   actions: read
   contents: read
 
