--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.25.2",
     "@opencode-ai/sdk": "^1.0.0",
+    "commander": "^12.0.0",
     "structlog": "^1.0.0",
     "zod": "^3.23.0"
   },
