--- a/package.json
+++ b/package.json
@@ -23,7 +23,16 @@
     "typecheck": "tsc --noEmit",
     "test": "vitest run",
     "lint": "eslint src",
-    "lint:fix": "eslint src --fix"
+    "lint:fix": "eslint src --fix",
+    "test:unit": "vitest run",
+    "test:integration": "node scripts/test-consumer-readiness.mjs && node scripts/test-mcp-functionality.mjs && node scripts/test-postinstall-files.mjs",
+    "test:e2e": "node scripts/validation/validate-mcp-connectivity.js && node scripts/validation/validate-oh-my-opencode-integration.js && node scripts/validation/validate-external-processes.js",
+    "test:comprehensive": "./scripts/validate-stringray-framework.sh",
+    "test:all": "npm run test:unit && npm run test:integration && npm run test:e2e && npm run test:comprehensive",
+    "test:coverage": "vitest run --coverage",
+    "test:security-audit": "node scripts/validation/validate-mcp-connectivity.js",
+    "test:dependency-scan": "node scripts/test-consumer-readiness.mjs",
+    "ci-install": "npm ci --ignore-scripts"
   },
   "keywords": [
     "ai",
