--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,24 +78,6 @@ jobs:
     runs-on: ubuntu-latest
     needs: build-and-test
 
-     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: "20.x"
-          cache: "npm"
-
-     - name: Install dependencies
-       run: npm run ci-install
-
-  publish:
-    runs-on: ubuntu-latest
-    needs: [test, build-and-test, security-scan]
-    if: github.event_name == 'release' && github.event.action == 'published'
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -105,18 +87,40 @@ jobs:
         with:
           node-version: "20.x"
           cache: "npm"
-          registry-url: "https://registry.npmjs.org"
 
       - name: Install dependencies
         run: npm run ci-install
 
-      - name: Build for production
-        run: npm run build:all
+      - name: Run security audit
+        run: npm audit --audit-level moderate
+        continue-on-error: true
 
-      - name: Run final tests
-        run: npm test
-
-      - name: Publish to npm
-        run: npm publish --tag latest
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+#  publish:
+#    runs-on: ubuntu-latest
+#    needs: [test, build-and-test, security-scan]
+#    if: github.event_name == 'release' && github.event.action == 'published'
+#
+#    steps:
+#      - name: Checkout code
+#        uses: actions/checkout@v4
+#
+#      - name: Setup Node.js
+#        uses: actions/setup-node@v4
+#        with:
+#          node-version: "20.x"
+#          cache: "npm"
+#          registry-url: "https://registry.npmjs.org"
+#
+#      - name: Install dependencies
+#        run: npm run ci-install
+#
+#      - name: Build for production
+#        run: npm run build:all
+#
+#      - name: Run final tests
+#        run: npm test
+#
+#      - name: Publish to npm
+#        run: npm publish --tag latest
+#        env:
+#          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
