--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,17 +19,18 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ matrix.node-version }}
-          cache: "npm"
+       - name: Setup Node.js ${{ matrix.node-version }}
+         uses: actions/setup-node@v4
+         with:
+           node-version: ${{ matrix.node-version }}
+           cache: "npm"
 
-      - name: Install dependencies
-        run: npm run ci-install
+       - name: Install dependencies
+         run: |
+           npm install --ignore-scripts || npm ci --ignore-scripts
 
-      - name: Run TypeScript type checking
-        run: npm run typecheck
+       - name: Run TypeScript type checking
+         run: npm run typecheck
 
       - name: Run linting
         run: npm run lint
@@ -49,18 +50,19 @@ jobs:
     needs: test
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+       - name: Checkout code
+         uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: "20.x"
-          cache: "npm"
-          registry-url: "https://registry.npmjs.org"
+       - name: Setup Node.js
+         uses: actions/setup-node@v4
+         with:
+           node-version: "20.x"
+           cache: "npm"
+           registry-url: "https://registry.npmjs.org"
 
-      - name: Install dependencies
-        run: npm run ci-install
+       - name: Install dependencies
+         run: |
+           npm install --ignore-scripts || npm ci --ignore-scripts
 
       - name: Build for production
         run: npm run build:all
@@ -79,17 +81,18 @@ jobs:
     needs: build-and-test
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+       - name: Checkout code
+         uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: "20.x"
-          cache: "npm"
+       - name: Setup Node.js
+         uses: actions/setup-node@v4
+         with:
+           node-version: "20.x"
+           cache: "npm"
 
-      - name: Install dependencies
-        run: npm run ci-install
+       - name: Install dependencies
+         run: |
+           npm install --ignore-scripts || npm ci --ignore-scripts
 
       - name: Run security audit
         run: npm audit --audit-level moderate
@@ -99,24 +102,23 @@ jobs:
     runs-on: ubuntu-latest
     needs: [test, build-and-test, security-scan]
     if: github.event_name == 'release' && github.event.action == 'published'
-    outputs:
-      version: ${{ steps.version.outputs.version }}
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+       - name: Checkout code
+         uses: actions/checkout@v4
+         with:
+           token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: "20.x"
-          cache: "npm"
-          registry-url: "https://registry.npmjs.org"
+       - name: Setup Node.js
+         uses: actions/setup-node@v4
+         with:
+           node-version: "20.x"
+           cache: "npm"
+           registry-url: "https://registry.npmjs.org"
 
-      - name: Install dependencies
-        run: npm run ci-install
+       - name: Install dependencies
+         run: |
+           npm install --ignore-scripts || npm ci --ignore-scripts
 
       - name: Determine version bump
         id: version
@@ -155,18 +157,19 @@ jobs:
     if: github.event_name == 'release' && github.event.action == 'published'
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+       - name: Checkout code
+         uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: "20.x"
-          cache: "npm"
-          registry-url: "https://registry.npmjs.org"
+       - name: Setup Node.js
+         uses: actions/setup-node@v4
+         with:
+           node-version: "20.x"
+           cache: "npm"
+           registry-url: "https://registry.npmjs.org"
 
-      - name: Install dependencies
-        run: npm run ci-install
+       - name: Install dependencies
+         run: |
+           npm install --ignore-scripts || npm ci --ignore-scripts
 
       - name: Run comprehensive deployment test
         run: |
@@ -191,18 +194,19 @@ jobs:
     if: github.event_name == 'release' && github.event.action == 'published'
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+       - name: Checkout code
+         uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: "20.x"
-          cache: "npm"
-          registry-url: "https://registry.npmjs.org"
+       - name: Setup Node.js
+         uses: actions/setup-node@v4
+         with:
+           node-version: "20.x"
+           cache: "npm"
+           registry-url: "https://registry.npmjs.org"
 
-      - name: Install dependencies
-        run: npm run ci-install
+       - name: Install dependencies
+         run: |
+           npm install --ignore-scripts || npm ci --ignore-scripts
 
       - name: Build for production
         run: npm run build:all
