--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,8 +26,7 @@ jobs:
            cache: "npm"
 
        - name: Install dependencies
-         run: |
-           npm install --ignore-scripts || npm ci --ignore-scripts
+         run: npm install --ignore-scripts
 
        - name: Run TypeScript type checking
          run: npm run typecheck
@@ -61,8 +60,7 @@ jobs:
            registry-url: "https://registry.npmjs.org"
 
        - name: Install dependencies
-         run: |
-           npm install --ignore-scripts || npm ci --ignore-scripts
+         run: npm install --ignore-scripts
 
       - name: Build for production
         run: npm run build:all
@@ -91,8 +89,7 @@ jobs:
            cache: "npm"
 
        - name: Install dependencies
-         run: |
-           npm install --ignore-scripts || npm ci --ignore-scripts
+         run: npm install --ignore-scripts
 
       - name: Run security audit
         run: npm audit --audit-level moderate
@@ -117,8 +114,7 @@ jobs:
            registry-url: "https://registry.npmjs.org"
 
        - name: Install dependencies
-         run: |
-           npm install --ignore-scripts || npm ci --ignore-scripts
+         run: npm install --ignore-scripts
 
       - name: Determine version bump
         id: version
@@ -168,8 +164,7 @@ jobs:
            registry-url: "https://registry.npmjs.org"
 
        - name: Install dependencies
-         run: |
-           npm install --ignore-scripts || npm ci --ignore-scripts
+         run: npm install --ignore-scripts
 
       - name: Run comprehensive deployment test
         run: |
@@ -205,8 +200,7 @@ jobs:
            registry-url: "https://registry.npmjs.org"
 
        - name: Install dependencies
-         run: |
-           npm install --ignore-scripts || npm ci --ignore-scripts
+         run: npm install --ignore-scripts
 
       - name: Build for production
         run: npm run build:all
