--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,16 +19,18 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ matrix.node-version }}
-          cache: "npm"
+       - name: Setup Node.js ${{ matrix.node-version }}
+         uses: actions/setup-node@v4
+         with:
+           node-version: ${{ matrix.node-version }}
+           cache: "npm"
 
-      - name: Install dependencies
-        run: npm install --ignore-scripts
+       - name: Install dependencies
+         run: |
+           rm -f package-lock.json
+           npm install --ignore-scripts
 
-      - name: Run TypeScript type checking
+       - name: Run TypeScript type checking
         run: npm run typecheck
 
       - name: Run linting
@@ -49,18 +51,20 @@ jobs:
     needs: test
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+       - name: Checkout code
+         uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: "20.x"
-          cache: "npm"
-          registry-url: "https://registry.npmjs.org"
+       - name: Setup Node.js
+         uses: actions/setup-node@v4
+         with:
+           node-version: "20.x"
+           cache: "npm"
+           registry-url: "https://registry.npmjs.org"
 
-      - name: Install dependencies
-        run: npm install --ignore-scripts
+       - name: Install dependencies
+         run: |
+           rm -f package-lock.json
+           npm install --ignore-scripts
 
       - name: Build for production
         run: npm run build:all
@@ -79,17 +83,19 @@ jobs:
     needs: build-and-test
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+       - name: Checkout code
+         uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: "20.x"
-          cache: "npm"
+       - name: Setup Node.js
+         uses: actions/setup-node@v4
+         with:
+           node-version: "20.x"
+           cache: "npm"
 
-      - name: Install dependencies
-        run: npm install --ignore-scripts
+       - name: Install dependencies
+         run: |
+           rm -f package-lock.json
+           npm install --ignore-scripts
 
       - name: Run security audit
         run: npm audit --audit-level moderate
@@ -101,20 +107,22 @@ jobs:
     if: github.event_name == 'release' && github.event.action == 'published'
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+       - name: Checkout code
+         uses: actions/checkout@v4
+         with:
+           token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: "20.x"
-          cache: "npm"
-          registry-url: "https://registry.npmjs.org"
+       - name: Setup Node.js
+         uses: actions/setup-node@v4
+         with:
+           node-version: "20.x"
+           cache: "npm"
+           registry-url: "https://registry.npmjs.org"
 
-      - name: Install dependencies
-        run: npm install --ignore-scripts
+       - name: Install dependencies
+         run: |
+           rm -f package-lock.json
+           npm install --ignore-scripts
 
       - name: Determine version bump
         id: version
@@ -153,18 +161,20 @@ jobs:
     if: github.event_name == 'release' && github.event.action == 'published'
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+       - name: Checkout code
+         uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: "20.x"
-          cache: "npm"
-          registry-url: "https://registry.npmjs.org"
+       - name: Setup Node.js
+         uses: actions/setup-node@v4
+         with:
+           node-version: "20.x"
+           cache: "npm"
+           registry-url: "https://registry.npmjs.org"
 
-      - name: Install dependencies
-        run: npm install --ignore-scripts
+       - name: Install dependencies
+         run: |
+           rm -f package-lock.json
+           npm install --ignore-scripts
 
       - name: Run comprehensive deployment test
         run: |
@@ -189,18 +199,20 @@ jobs:
     if: github.event_name == 'release' && github.event.action == 'published'
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+       - name: Checkout code
+         uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: "20.x"
-          cache: "npm"
-          registry-url: "https://registry.npmjs.org"
+       - name: Setup Node.js
+         uses: actions/setup-node@v4
+         with:
+           node-version: "20.x"
+           cache: "npm"
+           registry-url: "https://registry.npmjs.org"
 
-      - name: Install dependencies
-        run: npm install --ignore-scripts
+       - name: Install dependencies
+         run: |
+           rm -f package-lock.json
+           npm install --ignore-scripts
 
       - name: Build for production
         run: npm run build:all
