--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
+          cache: false
 
       - name: Install dependencies
         run: |
@@ -57,6 +58,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: "20.x"
+          cache: false
           registry-url: "https://registry.npmjs.org"
 
       - name: Install dependencies
@@ -88,6 +90,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: "20.x"
+          cache: false
 
       - name: Install dependencies
         run: |
@@ -113,6 +116,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: "20.x"
+          cache: false
           registry-url: "https://registry.npmjs.org"
 
       - name: Install dependencies
@@ -164,6 +168,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: "20.x"
+          cache: false
           registry-url: "https://registry.npmjs.org"
 
       - name: Install dependencies
@@ -201,6 +206,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: "20.x"
+          cache: false
           registry-url: "https://registry.npmjs.org"
 
       - name: Install dependencies
