fix: add retry logic for unit tests to handle rollup native binary issues

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,7 +53,8 @@ jobs:
         run: npm run lint
 
       - name: Run unit tests
-        run: npm run test:unit
+        run: |
+          npm run test:unit || (echo "Retrying with clean install..." && rm -rf node_modules package-lock.json && npm install --ignore-scripts && npm run test:unit)
 
       - name: Run integration tests
         run: npm run test:integration
