--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,6 +46,9 @@ jobs:
       - name: Run postinstall configuration
         run: npm run postinstall
 
+      - name: Validate postinstall files
+        run: node scripts/test-postinstall-files.mjs
+
       - name: Setup CI paths
         run: node scripts/setup-ci-paths.cjs
 
