fix: add npm pack to CI and fix script function call order

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,6 +68,9 @@ jobs:
       - name: Run integration tests
         run: npm run test:integration
 
+      - name: Package for comprehensive testing
+        run: npm pack
+
       - name: Run comprehensive validation
         run: npm run test:comprehensive
 
