--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,12 +68,6 @@ jobs:
       - name: Run integration tests
         run: npm run test:integration
 
-      - name: Package for comprehensive testing
-        run: npm pack
-
-      - name: Run comprehensive validation
-        run: npm run test:comprehensive
-
       - name: Run security audit
         run: npm run security-audit
 
@@ -143,6 +137,30 @@ jobs:
         run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+  release-validation:
+    needs: version-bump
+    runs-on: ubuntu-latest
+    if: github.event_name == 'release' && github.event.action == 'published'
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20.x"
+
+      - name: Install dependencies
+        run: |
+          rm -f package-lock.json
+          npm install --ignore-scripts
+
+      - name: Package for release validation
+        run: npm pack
+
+      - name: Run comprehensive release validation
+        run: npm run test:comprehensive
 
   e2e-test:
     needs: publish
